--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,151 @@
-# Prerequisites
-*.d
+.DS_STORE
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+/dist/
+/bazel-out
+/integration/bazel/bazel-*
+*.log
+/node_modules/
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# CircleCI temporary file for cache key computation.
+# See `save_month_to_file` in `.circleci/config.yml`.
+month.txt
 
-# Precompiled Headers
-*.gch
-*.pch
+# Include when developing application packages.
+pubspec.lock
+.c9
+.idea/
+.devcontainer/*
+!.devcontainer/README.md
+!.devcontainer/recommended-devcontainer.json
+!.devcontainer/recommended-Dockerfile
+.settings/
+.vscode/launch.json
+.vscode/settings.json
+.vscode/tasks.json
+*.swo
+*.swp
+modules/.settings
+modules/.vscode
+.vimrc
+.nvimrc
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# Don't check in secret files
+*secret.js
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+# Ignore npm/yarn debug log
+npm-debug.log
+yarn-error.log
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+# build-analytics
+.build-analytics
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
+# rollup-test output
+/modules/rollup-test/dist/
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# User specific bazel settings
+.bazelrc.user
+
+# User specific ng-dev settings
+.ng-dev.user*
+
+.notes.md
+baseline.json
+
+# Ignore .history for the xyz.local-history VSCode extension
+.history
+
+# Husky
+.husky/_
+aio/content/examples/.DS_Store
+
+
+# Ignore cache created with the Angular CLI.
+.angular/
+
+*~
+*.sw[mnpcod]
+*.log
+*.lock
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+*.tgz
+
+.idea/
+.vscode/
+.sass-cache/
+.versions/
+coverage/
+collection/
+dist/
+dist-transpiled/
+node_modules/
+tmp/
+temp/
+core/theme-builder/
+core/test-components/
+core/css/
+$RECYCLE.BIN/
+
+.DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
+.env
+
+.package.tmp.json
+
+src/themes/version.scss
+scripts/e2e/webpackEntryPoints.json
+scripts/build/e2e-generated-tsconfig.json
+*.css.ts
+
+stats.json
+
+# demo stuff
+demos/node_modules
+demos/polyfills
+demos/css
+demos/fonts
+demos/src/**/*.js
+demos/src/**/*.map
+demos/src/**/*.ngfactory.ts
+demos/src/**/*.d.ts
+demos/src/**/*.metadata.json
+demos/src/**/*.css.shim.ts
+prerender.html
+prerender-domino.html
+prerender-hydrated.html
+prerender-static.html
+
+# stencil
+packages/react/css/
+packages/vue/css/
+core/components/
+core/css/
+core/hydrate/
+core/loader/
+core/www/
+.stencil/
+
+# playwright
+core/test-results/
+core/playwright-report/
+core/**/*-snapshots
+
+# angular
+packages/angular/css/
+packages/angular/test/build/
+.angular/
+
+# vue
+packages/vue/test/build/
+
+# react
+packages/react/test/build/
+
+# react router
+packages/react-router/test/build/
+
+.npmrc
